create a script with the data dictionaries and import into map.js

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="scripts/map.js"></script>
+    <script src="scripts/map.js", type="module"></script>
 
     <script>
         document.getElementById('toggle-btn').addEventListener('click', function() {
